--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -3,14 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript</title>
 </head>
 
 <body>
+
+    <div class="box" id="box"></div>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+
+    <div class="wrapper">
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+    </div>
+
     <script src="script.js"></script>
-<h2></h2>
-<h2></h2>
+
 </body>
 
 </html>
