Задание 6. Практика. Пишем приложение

--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -9,24 +9,16 @@
 </head>
 
 <body>
-
-    <div class="box" id="box"></div>
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>4</button>
-    <button>5</button>
-
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-
-    <div class="wrapper">
-        <div class="heart"></div>
-        <div class="heart"></div>
-        <div class="heart"></div>
+    <div>
+        <input class="box" type="" name="" value="Нажми меня!">
     </div>
 
+    <div class="wrapper">
+        <button>Отправить</button>
+        <button>Show input</button>
+    </div>
+    <div>
+    </div>
     <script src="script.js"></script>
 
 </body>
